Picture in Picture Project Completed

--- a/Picture in Picture/index.html
+++ b/Picture in Picture/index.html
@@ -7,11 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://www.google.com/s2/u/0/favicons?domain=https://unsplash.com/" type="image/png">
-    <title>Document</title>
+    <title>Picture in Picture</title>
 </head>
 
 <body>
-
+    <!-- Video -->
+    <video controls height="360" width="640" id="video" hidden></video>
+    <!-- Button -->
+    <div class="button-container">
+        <button id="button">START</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
